# CommandsGPT

./: .gitignore  LICENSE  README.md  custom_commands.py  main.py  requirements.txt  setup.cfg
commands_gpt/: custom_commands.py  finetune_recognition_model.py  main.py  regex.py  saved_article.txt
commands_gpt/commands/: commands_funcs.py
commands_gpt/commands_gpt/: chat.py  config.py  fine_tuning.py  instruction_recognition.py  models.py  recognizers.py  regex.py  static.py
commands_gpt/commands_gpt/commands/: commands_funcs.py  graphs.py
commands_gpt/commands_gpt/util/: math_expr.py
commands_gpt/modules/: config.py  instruction_recognition.py  models.py
commands_gpt/modules/commands/: commands_funcs.py  graphs.py
