[metadata]
name = commandsgpt
version = 1.1.3
author = Martín Alexis Martínez Andrade
author_email = alexis.martinez.contacto@gmail.com
description = An implementation of GPT-4 that recognizes which commands it must run to fulfill an instruction, using a graph. Create new commands easily by describing them using natural language and coding the functions corresponding to the commands.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/AlexisAndradeDev/CommandsGPT
project_urls =
    Bug Tracker = https://github.com/AlexisAndradeDev/CommandsGPT/issues
    repository = https://github.com/AlexisAndradeDev/CommandsGPT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir = 
    = commands_gpt
packages = find:
python_requires = >=3.6

[options.packages.find]
where = commands_gpt
